fix(): swagger doc && add feeAndCount router
