# controllers/block.go
@@ -67,7 +67,7 @@ type Block struct {
 // @Accept  json
 // @Produce  json
 // @Security ApiKeyAuth
-// @Success 200 {object} JSONResult{data=[]Block}
+// @Success 200 {object} JsonResult{data=[]Block}
 // @Router /block/list [get]
 func (this *Controller) GetPageBlock(c *gin.Context) {
 	user, err := this.GetUser(c)
