# controllers/chain.go
@@ -85,7 +85,7 @@ func (this *Controller) CreateChain(c *gin.Context) {
 // @Produce  json
 // @Security ApiKeyAuth
 // @Param chain_id path int true "chainId"
-// @Success 200 {object} JSONResult{data=string} "成功删除链信息"
+// @Success 200 {object} JsonResult{data=string} "成功删除链信息"
 // @Router /chain/{chain_id} [delete]
 func (this *Controller) RemoveChain(c *gin.Context) {
 	chainIdStr := c.Param("chain_id")
