# controllers/data_analysis.go
@@ -2,9 +2,11 @@ package controllers
 
 import (
 	"fmt"
-	"sipemanager/dao"
+	"github.com/gin-gonic/gin"
 	"strconv"
 	"strings"
+
+	"sipemanager/dao"
 )
 
 type AnchorsNodes struct {
@@ -51,10 +53,27 @@ func (this *Controller) AnalysisAnchors() {
 	}
 }
 
-func (this *Controller) MakerFinishAnalysis() {
-
-}
-
-func (this *Controller) CountAnalysis() {
-
+//统计锚定节点验证数和手续费
+// @Summary 统计锚定节点验证数和手续费
+// @Tags Chart
+// @Accept  json
+// @Produce  json
+// @Param startTime query string true "hour:2020-07-10 12:00:00 day:2020-07-10 week:202025"
+// @Param endTime query string true "hour:2020-07-12 12:00:00 day:2020-07-12 week:202027"
+// @Param chainId query int true "chainId"
+// @Param timeType query string true "hour,day,week"
+// @Success 200 {object} JsonResult{data=[]dao.TxAnchorsNode}
+// @Router /chart/feeAndCount/list [get]
+func (this *Controller) FeeAndCount(c *gin.Context) {
+	startTime := c.Query("startTime")
+	endTime := c.Query("endTime")
+	chainIdParam := c.Query("chainId")
+	timeType := c.Query("timeType")
+	chainId, err := strconv.Atoi(chainIdParam)
+	anchors, err := this.dao.QueryAnchors(startTime, endTime, chainId, timeType)
+	if err != nil {
+		this.echoError(c, err)
+		return
+	}
+	this.echoResult(c, anchors)
 }
